legacy/k3s/apps/readarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: readarr
  labels:
    app.kubernetes.io/name: readarr
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: readarr
  ports:
    - name: http
      port: 80
      targetPort: http
